# tempfan-gpu

./: .gitignore  AGENTS.md  README.md  README_ZH.md  pyproject.toml
src/tempfan_gpu/: __init__.py  __main__.py  cli.py  curve.py  gpu.py  plot.py  pwm.py
src/tempfan_gpu/presets/: balanced.csv  performance.csv  quiet.csv
tests/: __init__.py  test_curve.py  test_gpu.py  test_plot.py  test_presets.py  test_pwm.py  test_pwm_lock.py
